Fix build warnings: Replace deprecated wrapper constructors and fix Javadoc issues
- Replace 14 deprecated wrapper constructors (Float, Double, Long) with valueOf() methods
  * aperture-icons: 5 Float constructors
  * influent-server: 2 Float, 2 Double, 5 Long constructors

- Fix Javadoc documentation issues
  * Fix duplicate parameter documentation in SphereUtilities.java
  * Fix typos: 'fo' -> 'of' in parameter descriptions
  * Replace invalid @inheritDoc tags with proper documentation in Vector.java
  * Fix incorrect parameter names in ContentService.java

- All 22 modules now build successfully with no deprecation warnings
- Code is now compatible with future Java versions
- Improved API documentation quality

Resolves build warnings identified in log analysis.